Move down to java 11.